# AMPCF

./: .gitignore  pyproject.toml
src/: ampcf.py  datafetcher.py  evaluate.py  models.py  train.py
