[tool.poetry]
name = "ampcf"
version = "0.1.0"
description = ""
authors = ["4nemi <4nemi.aaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
torch = {version = "^2.1.0+cu118", source = "torch_cu118"}
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
